--- a/Style - 2.css
+++ b/Style - 2.css
@@ -14,7 +14,7 @@ To change background images: Delete what's in the parenthesis. Upload the new ba
 :root { --name: "RAVENHOLM" !Important; }
 
 /* BANNER AVATAR (BOTTOM LEFT PIC) */
-:root { --avatar: url(https://www.delinetciler.net/resimler/2007/11/1948.gif) !important;}
+:root { --avatar: url(https://pa1.narvii.com/6803/74f632e5f1834187e176a7f2bb155390f2073743_hq.gif) !important;}
 
 
 
