--- a/MAIN.css
+++ b/MAIN.css
@@ -12,7 +12,7 @@ To change background images: Delete what's in the parenthesis. Upload the new ba
 	
 	
 /* BANNER TEXT*/
-:root { --name: "shimgisuu" !Important; }
+:root { --name: "RAVENHOLM" !Important; }
 
 /* BANNER AVATAR (BOTTOM LEFT PIC) */
 :root { --avatar: url(https://pa1.narvii.com/6803/74f632e5f1834187e176a7f2bb155390f2073743_hq.gif) !important;}
